Version 3.1:

* Option to automatically pause on menu screen [mrsilver76].
* Use RTLD_DEEPBIND with dlopen on Linux when loading plugins.
* Changes to how plugins are looked up.
* Ide patch.
* SCP floppy image doesn't wrap to revolution #0 cleanly [keirf].
* Fixed crash in nname_to_aname [PowderedToastMan].

Version 3.0.6:

* SCP floppy image doesn't wrap to revolution #0 cleanly [keirf].
* Fixed crash in nname_to_aname [PowderedToastMan].

Version 3.0.5:

* Packaging change to satisfy Apple's changed notarization process (sigh).

Version 3.0.4:

* Fix compilation of sana2.cpp with GCC 10.
* Fix OpenGL shaders with multiple passes on macOS.
* Include compilation fix for "unknown" CPUs architectures.
* Updated the GLAD OpenGL loader.

Version 3.0.1:

* Fix video scaling when restoring from fullscreen on Windows.

Version 3.0.0:

* Show error during configure if OpenAL is not found.
* More controller configs.
* Imported updated translations from crowdin.com.

Version 2.9.12dev:

* Added controller config for DualShock 4 v2.
* Change default for bezel option to 0 (off).

Version 2.9.11dev:

* Linux: Automatically uses (Feral Interactive) GameMode daemon if available.
* New option game_mode = 0 to disable above mentioned feature.
* Linux: Warn if running with a CPU governor other than performance.
* New option governor_warning = 0 to to disable above mentioned warning.
* Fixed support for multiple mice also on Windows.

Version 2.9.9dev:

* Added 8BitDo controller configurations, updated dualshock 3 for Linux.
* Fixed mouse integration.
* Fixed support for multiple mice (was accidentally disabled).
* More deterministic creation of fs-uae.dat [bmwiedemann].
* HAM6 on AGA fix [sonnenscheinchen].
* Imported updated translations from crowdin.com.

Version 2.9.8dev:

* New option whdload_quit_key to gracefully quit slaves.
* Do not alias mouse clicks when joystick_port_0_autoswitch is off.
* Added Build-Conflicts: libroar-dev to fix building on OBS.