@@ -336,5 +336,7 @@ const char* g_fs_emu_key_names[] = {
     "AUDIOPREV",
     "AUDIOSTOP",
     "AUDIOPLAY",
+    "APP1",
+    "APP2",
     NULL,
 };
