@@ -285,6 +285,8 @@ static uint32_t g_sdl2_keys[] = {
     0, // 280 SDL_SCANCODE_KBDILLUMUP
     0, // 281 SDL_SCANCODE_EJECT
     0, // 282 SDL_SCANCODE_SLEEP
+    FS_ML_KEY_APP1, // SDL_SCANCODE_APP1 = 283,
+    FS_ML_KEY_APP2, // SDL_SCANCODE_APP2 = 284,
 };
 
 #define LAST_SDL2_SCANCODE 282
